New entries should be added at the top

2004-12-18 Minor refactoring of tkagg toolbar to support embedding in
           an application - JDH

2004-12-14 Added linestyle to collections -  JDH

2004-12-14 Applied Nadia's setupext patch to fix libstdc++ link
           problem with contour and solaris  -JDH

2004-12-14 A number of pychecker inspired fixes, including removal of
           True and False from cbook which I erroneously thought was
           needed for python2.2 - JDH

2004-12-14 Finished porting doc strings for set introspection.
           Used silent_list for many get funcs that return
           lists. JDH

2004-12-13 dates.py: removed all timezone() calls, except for UTC - SC

======================================================================

2004-12-13 0.65 released - JDH

2004-12-13 colors.py: rgb2hex(), hex2color() made simpler (and faster), also
           rgb2hex() - added round() instead of integer truncation
           hex2color() - changed 256.0 divisor to 255.0, so now
           '#ffffff' becomes (1.0,1.0,1.0) not (0.996,0.996,0.996) - SC

2004-12-11 Added ion and ioff to pylab interface - JDH

2004-12-11 backend_template.py: delete FigureCanvasTemplate.realize() - most
           backends don't use it and its no longer needed

           backend_ps.py, backend_svg.py: delete show() and 
           draw_if_interactive() - they are not needed for image backends

           backend_svg.py: write direct to file instead of StringIO
           - SC

2004-12-10 Added zorder to artists to control drawing order of lines,
           patches and text in axes.  See examples/zoder_demo.py - JDH

2004-12-10 Fixed colorbar bug with scatter - JDH

2004-12-10 Added Nadia Dencheva <dencheva@stsci.edu> contour code - JDH

2004-12-10 backend_cairo.py: got mathtext working - SC

2004-12-09 Added Norm Peterson's svg clipping patch

2004-12-09 Added Matthew Newville's wx printing patch

2004-12-09 Migrated matlab to pylab - JDH
